[gd_scene load_steps=5 format=2]

[ext_resource path="res://Textures/UI/PC/LogInScreen.png" type="Texture" id=1]
[ext_resource path="res://UI/Computers/PCTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/Computers/ComputerLogInScreen.gd" type="Script" id=3]
[ext_resource path="res://Textures/UI/PC/LogInFailed.png" type="Texture" id=4]

[node name="ComputerLogInScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -312.0
margin_bottom = -298.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginScreen" type="TextureRect" parent="AspectRatioContainer"]
margin_right = 200.0
margin_bottom = 150.0
texture = ExtResource( 1 )

[node name="LoginLine" type="LineEdit" parent="AspectRatioContainer/LoginScreen"]
margin_left = 34.0
margin_top = 46.0
margin_right = 166.0
margin_bottom = 60.0
theme = ExtResource( 2 )
max_length = 16
placeholder_text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLine" type="LineEdit" parent="AspectRatioContainer/LoginScreen"]
margin_left = 34.0
margin_top = 70.0
margin_right = 166.0
margin_bottom = 84.0
theme = ExtResource( 2 )
max_length = 16
secret = true
placeholder_text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="AspectRatioContainer/LoginScreen"]
margin_left = 163.0
margin_top = 27.0
margin_right = 176.0
margin_bottom = 40.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK" type="Button" parent="AspectRatioContainer/LoginScreen"]
margin_left = 80.0
margin_top = 91.0
margin_right = 120.0
margin_bottom = 104.0
theme = ExtResource( 2 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginFailedScreen" type="TextureRect" parent="AspectRatioContainer"]
visible = false
margin_right = 200.0
margin_bottom = 150.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="AspectRatioContainer/LoginFailedScreen"]
margin_left = 58.0
margin_top = 66.0
margin_right = 142.0
margin_bottom = 96.0
theme = ExtResource( 2 )
text = "Login Failed"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK" type="Button" parent="AspectRatioContainer/LoginFailedScreen"]
margin_left = 80.0
margin_top = 96.0
margin_right = 120.0
margin_bottom = 109.0
theme = ExtResource( 2 )
text = "Ok"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="AspectRatioContainer/LoginScreen/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="AspectRatioContainer/LoginFailedScreen/OK" to="." method="_on_LoginFailed_Ok"]
